Fix feed spacing and loading

--- a/src/index.css
+++ b/src/index.css
@@ -311,9 +311,13 @@
   }
 
   .post-compact-media {
-    width: 100%;
+    width: 100vw;
+    max-width: 100vw;
     margin: 0;
+    margin-left: calc(-1 * (100vw - 100%) / 2);
+    margin-right: calc(-1 * (100vw - 100%) / 2);
     padding: 0;
+    position: relative;
   }
 }
 
